tests/snapshots/snapshot_golden_master__gm_support_level_restricted.snap
---
source: tests/snapshot_golden_master.rs
expression: "SupportLevel::Restricted { reason: \"experimental preview\".into() }"
---
{
  "restricted": {
    "reason": "experimental preview"
  }
}
