tests/snapshots/snapshot_golden_master__gm_support_level_unsupported.snap
---
source: tests/snapshot_golden_master.rs
expression: "SupportLevel::Unsupported"
---
"unsupported"
