tests/snapshots/snapshot_golden_master__gm_work_order_builder_with_options.snap
---
source: tests/snapshot_golden_master.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "build task",
  "lane": "workspace_first",
  "workspace": {
    "root": "/home/dev/project",
    "mode": "pass_through",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "gpt-4o",
    "vendor": {},
    "env": {},
    "max_budget_usd": 2.5,
    "max_turns": 30
  }
}
