tests/snapshots/snapshot_golden_master__gm_work_order_empty_context.snap
---
source: tests/snapshot_golden_master.rs
expression: wo
---
{
  "id": "cccccccc-dddd-4eee-8fff-aaaaaaaaaaaa",
  "task": "No context",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": null,
    "vendor": {},
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
